feat: widget-to-canvas beta

--- a/src/index.wxml
+++ b/src/index.wxml
@@ -1,3 +1,1 @@
-<view class="index other">{{prop}}-{{flag}}</view>
-
-<canvas id="canvas" type="2d" class="container" style="width: {{width}}px; height: {{height}}px"></canvas>
+<canvas id="canvas" type="2d" style="width: {{width}}px; height: {{height}}px;"></canvas>
