--- a/src/index.wxml
+++ b/src/index.wxml
@@ -1,1 +1,1 @@
-<canvas id="canvas" type="2d" style="width: {{width}}px; height: {{height}}px;"></canvas>
+<canvas id="canvas" type="{{use2dCanvas ? '2d' : ''}}" style="width: {{width}}px; height: {{height}}px;"></canvas>
