--- a/tools/demo/pages/index/index.wxml
+++ b/tools/demo/pages/index/index.wxml
@@ -1,4 +1,4 @@
-<wxml-to-canvas class="widget"></wxml-to-canvas>
+<wxml-to-canvas class="widget" bind:canvasReady="getImage"></wxml-to-canvas>
 <button bindtap="renderToCanvas">渲染到canvas</button>
 <button bindtap="extraImage">导出图片</button>
 <button bindtap="getImage">直接导出图片</button>
